Upgraded gradle to 8.0.1 Introduced the version library, gradle plugin.